tests/base/invalid/SetComprehension_CompileFail_1.whiley
void System::main([string] args):
    xs = { 1,2,3,4 }
    zs = { x | y ∈ xs }
    print str(xs)
    print str(zs)
